example-app/config/k8s/ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-basic # basic-ingress
  # Uncomment below if using static IP - from compute-ddress.yaml
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: "gke-static-ip"
spec:
  backend:
    serviceName: web
    servicePort: 3080
# TBD port 3001 webservice?
